DigicielFull/force-app/main/default/objects/Opportunity/fields/Account_Billing__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing__c</fullName>
    <formula>Text( Account.Billing_Country__c )</formula>
    <label>zDeprecatedAccount Billing</label>
    <type>Text</type>
</CustomField>