DigicielFull/force-app/main/default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <businessOwnerUser>ttsdev_admin@digicelgroup.com.commcloud</businessOwnerUser>
    <description>USED BY THE CM TOOL IN TRINIDAD 
This is required for when an opportunity is submitted to processing for corporate fulfillment.</description>
    <formula>Account.Owner.FirstName   &amp; &quot; &quot; &amp; Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>