DigicielFull/force-app/main/default/objects/Opportunity/fields/Actual_AOP__c.field-meta.xml
<CustomField>
    <fullName>Actual_AOP__c</fullName>
    <formula>IF(NOT(ISNULL(Actual_Billed_Date__c )), Installation__c +  OTC__c  + ((MRC__c +  Rental_or_Lease__c) * CASE( MONTH( Actual_Billed_Date__c ) , 
1,3, 
2,2, 
3,1, 
16-MONTH( Actual_Billed_Date__c ))), 0)</formula>
    <label>zDEPRECATED - Actual AOP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>