DigicielFull/force-app/main/default/objects/Opportunity/fields/All_Line_Items_Billed__c.field-meta.xml
<CustomField>
    <fullName>All_Line_Items_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox confirms that all Line Items on an Opportunity have been Installed/Billed</description>
    <label>All Line Items Billed</label>
    <type>Checkbox</type>
</CustomField>