DigicielFull/force-app/main/default/objects/Opportunity/fields/amc__Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Start_Date__c</fullName>
    <description>Identifies the date that will be used for scheduling the Project</description>
    <inlineHelpText>Identifies the date that will be used for scheduling the Project</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>