DigicielFull/force-app/main/default/objects/Opportunity/fields/amc__Project_Template__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>amc__Project__c.amc__Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Opportunities Using Template</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>