DigicielFull/force-app/main/default/objects/Opportunity/fields/Annual_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring__c</fullName>
    <formula>(MRC__c * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Recurring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>