DigicielFull/force-app/main/default/objects/Opportunity/fields/AnnualMRC2__c.field-meta.xml
<CustomField>
    <fullName>AnnualMRC2__c</fullName>
    <formula>MRC__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>