DigicielFull/force-app/main/default/objects/Opportunity/fields/AnnualMRC__c.field-meta.xml
<CustomField>
    <fullName>AnnualMRC__c</fullName>
    <description>Monthly Reccuring Charge</description>
    <inlineHelpText>Monthly Reccuring Charge</inlineHelpText>
    <label>Annual MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>