DigicielFull/force-app/main/default/objects/Opportunity/fields/AP_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_Email__c</fullName>
    <label>zDeprecatedAP Contact Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>