DigicielFull/force-app/main/default/objects/Opportunity/fields/Application_Sale__c.field-meta.xml
<CustomField>
    <fullName>Application_Sale__c</fullName>
    <label>Application Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trinidad &amp; Tobago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>