DigicielFull/force-app/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>This field is only to be used to track the current status of approvals and is no users are to be granted edit access to this field. 

Updates to this fields data will be governed by the approval processes. This field was created because keeping the approvals being tracked through the &quot;Opportunity Status&quot; field is not valid for historical tracking as the values will change over time</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Solution Design Rejected</fullName>
            </value>
            <value>
                <fullName>Solution Design Approved</fullName>
            </value>
            <value>
                <fullName>Submitted For Proposal Acceptance Approval</fullName>
            </value>
            <value>
                <fullName>Proposal Acceptance Rejected</fullName>
            </value>
            <value>
                <fullName>Proposal Acceptance Approved</fullName>
            </value>
            <value>
                <fullName>Approval Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>