DigicielFull/force-app/main/default/objects/Opportunity/fields/AvanceOrder__c.field-meta.xml
<CustomField>
    <fullName>AvanceOrder__c</fullName>
    <label>% Avance à la commande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 %</fullName>
            </value>
            <value>
                <fullName>30 %</fullName>
                <default>true</default>
                <label>30 %</label>
            </value>
            <value>
                <fullName>50 %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>