DigicielFull/force-app/main/default/objects/Opportunity/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>zDeprecatedBacklog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>