DigicielFull/force-app/main/default/objects/Opportunity/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <label>zDeprecatedBAN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>