DigicielFull/force-app/main/default/objects/Opportunity/fields/Billed_MRC__c.field-meta.xml
<CustomField>
    <fullName>Billed_MRC__c</fullName>
    <label>Billed MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>