DigicielFull/force-app/main/default/objects/Opportunity/fields/Billing_Customer_ID_BAN__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_ID_BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Customer ID/BAN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>BAN__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BAN__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>