DigicielFull/force-app/main/default/objects/Opportunity/fields/Blackberry_Data_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Blackberry_Data_ARPU__c</fullName>
    <formula>BB_DATA_ARPU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeprecatedBlackberry/Data ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>