DigicielFull/force-app/main/default/objects/Opportunity/fields/Blackberry_Data_Contract_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Blackberry_Data_Contract_ARPU__c</fullName>
    <formula>(Blackberry_Data_MO_ARPU__c * CASE(Contract_Term__c, &quot;1 Year&quot;, 12, &quot;2 Years&quot;, 24,&quot;3 Years&quot;, 36, &quot;4 Years&quot;, 48, &quot;5 Years&quot;, 52, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeprecated - Blackberry/Data</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>