DigicielFull/force-app/main/default/objects/Opportunity/fields/Blackberry_Data_MO_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Blackberry_Data_MO_ARPU__c</fullName>
    <formula>Blackberry_Data_ARPU__c * GPRS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeprecated - Blackberry/Data MO ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>