DigicielFull/force-app/main/default/objects/Opportunity/fields/Blended_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Blended_ARPU__c</fullName>
    <label>zDeprecatedBlended ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>