DigicielFull/force-app/main/default/objects/Opportunity/fields/Blended_ARPU_Price__c.field-meta.xml
<CustomField>
    <fullName>Blended_ARPU_Price__c</fullName>
    <formula>X4G_ARPU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeprecatedBlended ARPU Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>