DigicielFull/force-app/main/default/objects/Opportunity/fields/Blended_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Blended_Subscribers__c</fullName>
    <label>zDeprecatedBlended Subscribers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>