DigicielFull/force-app/main/default/objects/Opportunity/fields/Broadband_Home_Internet_Packages__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Home_Internet_Packages__c</fullName>
    <label>zDeprecatedBroadband Home Internet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 MB</fullName>
            </value>
            <value>
                <fullName>2 MB</fullName>
            </value>
            <value>
                <fullName>4 MB</fullName>
            </value>
            <value>
                <fullName>8 MB</fullName>
            </value>
            <value>
                <fullName>16 MB</fullName>
            </value>
            <value>
                <fullName>Maverick 3mbs</fullName>
            </value>
            <value>
                <fullName>Power- 8mbs</fullName>
            </value>
            <value>
                <fullName>Extra- 16mbs</fullName>
            </value>
            <value>
                <fullName>Max 32mbs</fullName>
            </value>
            <value>
                <fullName>Pro- 50mbs</fullName>
            </value>
            <value>
                <fullName>Express Plus</fullName>
            </value>
            <value>
                <fullName>Extreme Plus</fullName>
            </value>
            <value>
                <fullName>Turbo</fullName>
            </value>
            <value>
                <fullName>Turbo Plus</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>