DigicielFull/force-app/main/default/objects/Opportunity/fields/Broadband_Units__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Units__c</fullName>
    <label>Broadband Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>