DigicielFull/force-app/main/default/objects/Opportunity/fields/BTC_Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>BTC_Revenue_Type__c</fullName>
    <label>BTC Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTC</fullName>
            </value>
            <value>
                <fullName>BTC Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>