DigicielFull/force-app/main/default/objects/Opportunity/fields/Budget_EBITDA_CFY__c.field-meta.xml
<CustomField>
    <fullName>Budget_EBITDA_CFY__c</fullName>
    <inlineHelpText>EBITDA (Earnings Before Interest, Taxes, Depreciation and Amortization) as set forth in the Current Approved Plan and Operating Budget [Business Case];</inlineHelpText>
    <label>Budget EBITDA CFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>