DigicielFull/force-app/main/default/objects/Opportunity/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <formula>Account.Building_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zDeprecatedBuilding Name</label>
    <type>Text</type>
</CustomField>