DigicielFull/force-app/main/default/objects/Opportunity/fields/Business_Issues_Driving_the_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Business_Issues_Driving_the_Purchase__c</fullName>
    <label>zDEPRECATED - Business Issues Drivin</label>
    <type>TextArea</type>
</CustomField>