DigicielFull/force-app/main/default/objects/Opportunity/fields/Business_Solution_Team__c.field-meta.xml
<CustomField>
    <fullName>Business_Solution_Team__c</fullName>
    <label>zDeprecatedBusiness Solution Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB 1</fullName>
            </value>
            <value>
                <fullName>SMB 2</fullName>
            </value>
            <value>
                <fullName>SMB 3</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Government/Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>