DigicielFull/force-app/main/default/objects/Opportunity/fields/CAPEXCFY__c.field-meta.xml
<CustomField>
    <fullName>CAPEXCFY__c</fullName>
    <inlineHelpText>Also called capital spending or expenditure. The amount in Business Case to acquire or upgrade productive assets (Eg, CPE, Equipment, MV) in order to increase the capacity or efficiency of the Company for the current fiscal year.</inlineHelpText>
    <label>CAPEX CFY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>