DigicielFull/force-app/main/default/objects/Opportunity/fields/Carry_Over_MRC__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_MRC__c</fullName>
    <formula>MRC__c - ProRata_MRC_Act__c</formula>
    <inlineHelpText>Calculates the MRC Value less the Pro Rata MRC Actual (i.e the portion that was not billable in the handover month, but will be in the next month)</inlineHelpText>
    <label>zDeprecatedCarry Over MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>