DigicielFull/force-app/main/default/objects/Opportunity/fields/City2__c.field-meta.xml
<CustomField>
    <fullName>City2__c</fullName>
    <label>zDeprecatedCity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Abenaston</fullName>
            </value>
            <value>
                <fullName>Acajutla</fullName>
            </value>
            <value>
                <fullName>Acaribo</fullName>
            </value>
            <value>
                <fullName>Agua Caliente</fullName>
            </value>
            <value>
                <fullName>Aguilares</fullName>
            </value>
            <value>
                <fullName>Ahuachapán</fullName>
            </value>
            <value>
                <fullName>Akouménaye</fullName>
            </value>
            <value>
                <fullName>Albina</fullName>
            </value>
            <value>
                <fullName>Alegría</fullName>
            </value>
            <value>
                <fullName>Alicoto</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Anamorós</fullName>
            </value>
            <value>
                <fullName>Anapaike</fullName>
            </value>
            <value>
                <fullName>Anse-Bertrand</fullName>
            </value>
            <value>
                <fullName>Anse La Raye</fullName>
            </value>
            <value>
                <fullName>Antiguo Cuscatlán</fullName>
            </value>
            <value>
                <fullName>Apaneca</fullName>
            </value>
            <value>
                <fullName>Apastepeque</fullName>
            </value>
            <value>
                <fullName>Apatou</fullName>
            </value>
            <value>
                <fullName>Apetina</fullName>
            </value>
            <value>
                <fullName>Apoera</fullName>
            </value>
            <value>
                <fullName>Apopa</fullName>
            </value>
            <value>
                <fullName>Arambala</fullName>
            </value>
            <value>
                <fullName>Arcatao</fullName>
            </value>
            <value>
                <fullName>Arima</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Arouca</fullName>
            </value>
            <value>
                <fullName>Arraiján</fullName>
            </value>
            <value>
                <fullName>Atiquizaya</fullName>
            </value>
            <value>
                <fullName>Aurora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>