DigicielFull/force-app/main/default/objects/Opportunity/fields/ClientUnpaidAmount__c.field-meta.xml
<CustomField>
    <fullName>ClientUnpaidAmount__c</fullName>
    <label>Montant en impayé du client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>