DigicielFull/force-app/main/default/objects/Opportunity/fields/Close_date__c.field-meta.xml
<CustomField>
    <fullName>Close_date__c</fullName>
    <description>- If an Opportunity is Open and not Close-Won, Fill out this field with the Close Date field
- If an Opportunity is Closed Won, Fill this field with the Estimated Bill Date
- If an Opportunity is fully Billed, Populate the Actual Bill Date on the Opp, and use that field for this field</description>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>