DigicielFull/force-app/main/default/objects/Opportunity/fields/Close_Plan__c.field-meta.xml
<CustomField>
    <fullName>Close_Plan__c</fullName>
    <inlineHelpText>What you will do to close this deal</inlineHelpText>
    <label>Close Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>