DigicielFull/force-app/main/default/objects/Opportunity/fields/Cloud_Big_Deal__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Big_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDeprecatedCloud Big Deal</label>
    <type>Checkbox</type>
</CustomField>