DigicielFull/force-app/main/default/objects/Opportunity/fields/Comments_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Lead__c</fullName>
    <label>Comments from Lead</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>