DigicielFull/force-app/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <inlineHelpText>A compelling event has a defined date and is a direct response to a business pressure. The action is expected to deliver a significant business result. The compelling event defines the reason for the economic owner to act.</inlineHelpText>
    <label>Compelling Event</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>