DigicielFull/force-app/main/default/objects/Opportunity/fields/Competitive_Differentiators__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Differentiators__c</fullName>
    <inlineHelpText>Highlight your competitive differentiators</inlineHelpText>
    <label>Competitive Differentiators</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>