DigicielFull/force-app/main/default/objects/Opportunity/fields/Competitor_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Percentage__c</fullName>
    <label>zDeprecatedCompetitor Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>