DigicielFull/force-app/main/default/objects/Opportunity/fields/Connect_the_Dots__c.field-meta.xml
<CustomField>
    <fullName>Connect_the_Dots__c</fullName>
    <inlineHelpText>Include any 3rd party that can help you connect with decision makers</inlineHelpText>
    <label>zDeprecatedConnect the Dots</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>