DigicielFull/force-app/main/default/objects/Opportunity/fields/ContactText__c.field-meta.xml
<CustomField>
    <fullName>ContactText__c</fullName>
    <label>Contact (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>