DigicielFull/force-app/main/default/objects/Opportunity/fields/Contract_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accepted_Date__c</fullName>
    <description>This field will be deleted after we finish with what we are trying to achieve in the PNG Market.</description>
    <label>Contract Accepted Date</label>
    <type>DateTime</type>
</CustomField>